--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,46 @@ th{
 	border: 1px solid;
   text-align: center;
   left: 50px;
+  padding: 2rem;
+
 }
 
 body{
   text-align: center;
-  background-color: #D3D3D3;
+  background-color: #686868;
 }
 
-title{
-  
+.planet{
+  display: block;
+  margin: 0 auto;
+  width: 200px; 
+  height: 100px;
+  object-fit: cover;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-top: 2rem;
+    background-color: #303030;
+    border: 1px solid white;
+    width: 43%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+    border-radius: 30px;
+    color: white;
+}
+
+#planets{
+  width: 90%;
+  border-collapse: collapse;
+  margin: 2rem auto;
+  background-color: #303030;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  overflow: hidden;
+  border: 1px solid white;
+  color: white;
 }
